Fixed a servers not showing up issue

--- a/css/channelList.css
+++ b/css/channelList.css
@@ -65,6 +65,12 @@
     transform: rotate(180deg);
 }
 
+.news {
+    height: 18px !important;
+    width: 18px !important;
+    padding: 1px;
+}
+
 .channelContainer {
     display: none;
 }
